--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             extend: {
               colors: {
                 clifford: '#da373d',
+                penguin: '#FFFBF0',
               }
             }
           }
@@ -22,10 +23,10 @@
       </script>
 </head>
 <body>
-    <header>
-        <section class="container mx-auto">
+    <header class="bg-penguin pb-32 pt-12">
+        <section class="container mx-auto sm:flex items-center justify-center">
             <div class="space-y-3">
-                <h1 class="text-5xl uppercase font-bold">
+                <h1 class="text-2xl sm:text-5xl uppercase font-bold">
                     <span class="text-yellow-300">Be the Penguins</span>
                     <br>
                     <span>of Winter</span>
@@ -35,7 +36,7 @@
                 <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
             </div>
             <div>
-                <img src="images/model.png" alt="">
+                <img class="w-45 sm:w-full" src="images/model.png" alt="">
             </div>
         </section>
     </header>
