added man-woman jacket

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
               colors: {
                 clifford: '#da373d',
                 penguin: '#FFFBF0',
+                pricecolor: '#FABE4C',
               }
             }
           }
@@ -40,6 +41,103 @@
             </div>
         </section>
     </header>
+
+    <main  class="container mx-auto">
+        <!-- woman jacket -->
+        <section class="pb-20">
+            <h2 class="text-5xl uppercase font-bold my-11">Woman Jacket</h2>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-lg ">
+                <!-- jacket-1 -->
+                <div class="p-4 shadow-lg">
+                    <div class="bg-slate-100 p-5 rounded-xl">
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-semibold">Yellow Coat Jacket </h4>
+                    <p>Find the latest trends, styles and deals with free delivery available!</p>
+
+                    <div class="flex justify-between">
+                        <h3 class="text-3xl font-semibold text-pricecolor">$234</h3>
+                        <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
+                    </div>
+                </div>
+                <!-- jacket-2 -->
+                <div class="p-4 shadow-lg">
+                    <div class="bg-slate-100 p-5 rounded-xl">
+                        <img src="images/jacket-2.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-semibold">Ladies Jacket</h4>
+                    <p>Huge collection of women's jackets & coats at low offer price & discounts at COD.
+                    </p>
+
+                    <div class="flex justify-between">
+                        <h3 class="text-3xl font-semibold text-pricecolor">$234</h3>
+                        <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
+                    </div>
+                </div>
+                <!-- jacket-3 -->
+                <div class="p-4 shadow-lg">
+                    <div class="bg-slate-100 p-5 rounded-xl">
+                        <img src="images/jacket-3.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-semibold">Woman Leather Jacket</h4>
+                    <p>Free shipping and returns on women's leather & faux-leather jackets.</p>
+
+                    <div class="flex justify-between">
+                        <h3 class="text-3xl font-semibold text-pricecolor">$234</h3>
+                        <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Man Jacket -->
+        <section class="pb-20">
+            <h2 class="text-5xl uppercase font-bold my-11">Man Jacket</h2>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-lg">
+                <!-- jacket-4 -->
+                <div class="p-4 shadow-lg">
+                    <div class="bg-slate-100 p-5 rounded-xl">
+                        <img src="images/jacket-4.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-semibold">Snowboard Jacket Mens</h4>
+                    <p>Shop Men's Snowboard Jackets at evo. Best selection, authentic reviews, and helpful humans.
+                    </p>
+
+                    <div class="flex justify-between">
+                        <h3 class="text-3xl font-semibold text-pricecolor">$234</h3>
+                        <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
+                    </div>
+                </div>
+                <!-- jacket-5 -->
+                <div class="p-4 shadow-lg">
+                    <div class="bg-slate-100 p-5 rounded-xl">
+                        <img src="images/jacket-5.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-semibold">Man Leather Jackets</h4>
+                    <p>Shop our men's leather jackets and coats. Buy real leather jackets and coats for men.
+                    </p>
+
+                    <div class="flex justify-between">
+                        <h3 class="text-3xl font-semibold text-pricecolor">$234</h3>
+                        <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
+                    </div>
+                </div>
+                <!-- jacket-6 -->
+                <div class="p-4 shadow-lg">
+                    <div class="bg-slate-100 p-5 rounded-xl">
+                        <img src="images/jacket-6.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-semibold">Man Casual Jackets</h4>
+                    <p>Find a wide variety of different Men's Casual Jackets, including Hooded Men's Casual Jackets.</p>
+
+                    <div class="flex justify-between">
+                        <h3 class="text-3xl font-semibold text-pricecolor">$234</h3>
+                        <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     
 </body>
