added benefits section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </section>
         
         <!-- Man Jacket -->
-        <section class="pb-20">
+        <section class="pb-24">
             <h2 class="text-5xl uppercase font-bold my-11">Man Jacket</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-lg">
                 <!-- jacket-4 -->
@@ -133,6 +133,38 @@
                     <div class="flex justify-between">
                         <h3 class="text-3xl font-semibold text-pricecolor">$234</h3>
                         <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- our benefits -->
+        <section class="pb-20">
+            <div class="grid grid-cols-2 gap-7">
+                <div class="rounded-lg flex justify-between bg-slate-400 p-6">
+                    <img class="w-20 h-20" src="images/house.png" alt="">
+                    <div>
+                        <h3 class="text-3xl font-semibold">Find the Perfect Fit</h3>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="row-span-3">
+                    <img src="images/shopping.png" alt="">
+                </div>
+                <div class="rounded-lg flex justify-between bg-slate-400 p-7">
+                    <img class="w-20 h-20" src="images/box.png" alt="">
+                    <div>
+                        <h3 class="text-3xl font-semibold">Find the Perfect Fit</h3>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="rounded-lg flex justify-between bg-slate-400 p-7">
+                    <img class="w-20 h-20" src="images/question.png" alt="">
+                    <div>
+                        <h3 class="text-3xl font-semibold">Find the Perfect Fit</h3>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
                     </div>
                 </div>
             </div>
