--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Penguin Fashion</title>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/8daca75076.js" crossorigin="anonymous"></script>
+    <!-- fav-icon -->
+    <link rel="shortcut icon" href="icons/shopify-brands.svg" type="image/x-icon">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -170,7 +172,10 @@
             </div>
         </section>
     </main>
-
     
+    <footer class="text-center font-bold mb-10">
+        <small>© 1996-2022, nafis.com, Inc. or its affiliates</small>
+    </footer>
+
 </body>
 </html>
