--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
         </section>
         <!-- our benefits -->
         <section class="pb-20">
-            <div class="grid grid-cols-2 gap-7">
+            <div class="grid sm:grid-cols-2 gap-7">
+                <div class="row-span-3">
+                    <img src="images/shopping.png" alt="">
+                </div>
                 <div class="rounded-lg flex justify-between bg-slate-400 p-6">
                     <img class="w-20 h-20" src="images/house.png" alt="">
                     <div>
@@ -149,9 +152,6 @@
                         <p>Everybody is different, which is why we
                             offer styles for every body.</p>
                     </div>
-                </div>
-                <div class="row-span-3">
-                    <img src="images/shopping.png" alt="">
                 </div>
                 <div class="rounded-lg flex justify-between bg-slate-400 p-7">
                     <img class="w-20 h-20" src="images/box.png" alt="">
