--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                     <br>
                     <span>of Winter</span>
                 </h1>
-                <p>Lorem Ipsum is simply dummy text of the printing 
-                    and typesetting industry.</p>
+                <p>Free shipping on millions of items. Get the best of Shopping and Entertainment with Prime.</p>
                 <button class="bg-[#A4BC46] uppercase py-2 px-4 text-white font-semibold rounded-lg"> <i class="fa-solid fa-cart-shopping text-white mr-1"></i>Buy Now</button>
             </div>
             <div>
